fix(writeback-java): company override for multi-profile eMRO + runnable smoke invocation
Live smoke run against the real eMRO (oracle19c) produced two findings:
(1) PROFILE_MASTER has 4 rows (ACA/ANEM/ANT/TRAX) — the single-row company()
assumption is violated; new writeback.emro.company config property wins over
the lookup when set (pinned by ConfiguredCompanyTest). (2) The documented
smoke invocation never ran: pom's hardcoded excludedGroups ignores CLI
overrides — now parameterized via smoke.excludedGroups. Smoke result: 8/9
schema checks passed incl. DML restore; D17 closed separately (PK constraint
names contain table names on the real schema).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>